--- a/src/main/webapp/temp.html
+++ b/src/main/webapp/temp.html
@@ -6,11 +6,19 @@
 </head>
 <body>
 
-    <h1>Liste de personne</h1>
+    <h1>Formulaire addition</h1>
 
-    <ul>
-        <li> nom - age ans</li>
-    </ul>
+    <form action="/add/rslt" method="post">
+
+        <label for="ma">membre a</label>
+        <input type="text" id="ma" name="ma"><br>
+
+        <label for="mb">membre b</label>
+        <input type="text" id="mb" name="mb"><br>
+
+        <button type="submit">soumettre</button>
+
+    </form>
 
 </body>
 </html>
