--- a/src/main/webapp/temp.html
+++ b/src/main/webapp/temp.html
@@ -6,15 +6,12 @@
 </head>
 <body>
 
-    <h1>Formulaire addition</h1>
+    <h1>Formulaire ajout personne</h1>
 
-    <form action="/add/rslt" method="post">
+    <form action="/contextPath/person/delete" method="post">
 
-        <label for="ma">membre a</label>
-        <input type="text" id="ma" name="ma"><br>
-
-        <label for="mb">membre b</label>
-        <input type="text" id="mb" name="mb"><br>
+        <label for="pos">position de la person dans la liste</label>
+        <input type="number" id="pos" name="pos"><br>
 
         <button type="submit">soumettre</button>
 
